       and changes the type of the author and committer fields to
       Git::PurePerl::Actor, which is an object with name and
       email fields (thanks to martijn)
     - add the parent field to a new commit when available (thanks
       to martijn)
     - allow bare repositories with the gitdir parameter (thanks
       to martijn)

0.40 Fri Mar 13 15:29:02 GMT 2009
     - Skip protocol tests on Win32 (thanks to fayland)
     - Add description (thanks to fayland)

0.39 Fri Mar 13 10:14:57 GMT 2009
     - add a method to generate the sha1 of an object
     - add a raw method to objects
     - add new set of classes to add objects
     - add class to talk the git protocol
     - add a method to checkout the head
     - add a method to return the references
     - add a method to return the commit for a reference
     - fix bug where it would not find an object if there was a
       mixture of packs and loose objects
     - fix bug to do with empty files
     - split methods into those that returns sha1s and those that
       return objects
     - add class to index packs
     - make it work under Win32 (thanks to fayland)

0.38 Thu Dec 18 10:26:49 GMT 2008
     - add init() method to create a new repository
     - create Git::PurePerl::Loose to handle loose objects
     - make Git::PurePerl::Pack's all_sha1s return a stream

0.37 Fri Dec 12 16:18:02 GMT 2008
     - add minimal docs (thanks to tokuhirom)
     - speed everything up by making the classes immutable
     - lazily build packs
     - simplify the code by splitting pack index reading into
       Git::PurePerl::PackIndex::Version1 and 
       Git::PurePerl::PackIndex::Version2
     - minor tidying of code

0.36 Wed Nov 26 21:49:33 GMT 2008
     - add a class to represent tags
     - complain if the directory does not have a .git directory
     - remove commented-out code
     - only open a pack file or index once
     - remove some unnecessary seeks

0.35 Tue Nov 25 17:37:56 GMT 2008